правки ошибок (редактирование)